[package]
name = "rublog"
version = "0.1.0"
authors = ["lizhi <lizhiwj2019@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
comrak = "0.9.1"
tera = "1"
structopt = "0.3.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11",features = ["blocking"] }
error-chain="0.12"
regex="1.0"
lazy_static="1.0"